# Rural-Offline-LLM

./: .gitignore  .gitmodules  PRD.md  README.md  setup.sh
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp  whisper_jni.cpp
app/src/main/java/com/gyan/offline/: GyanApplication.kt  MainActivity.kt
app/src/main/java/com/gyan/offline/ads/: AdManager.kt
app/src/main/java/com/gyan/offline/data/: AppPreferences.kt
app/src/main/java/com/gyan/offline/download/: ModelDownloadManager.kt
app/src/main/java/com/gyan/offline/inference/: LlamaInference.kt  PiperTTS.kt  WhisperSTT.kt
app/src/main/java/com/gyan/offline/lang/: LanguageDetector.kt
app/src/main/java/com/gyan/offline/network/: ConnectivityObserver.kt
app/src/main/java/com/gyan/offline/ui/chat/: ChatMessage.kt  ChatScreen.kt  ChatViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
gradle/: libs.versions.toml
training/: requirements.txt
training/configs/: train_config.yaml
training/data/agriculture/: sample.jsonl
training/data/banking/: sample.jsonl
training/data/out_of_domain/: sample.jsonl
training/data/upsc/: sample.jsonl
training/data_pipeline/: requirements_pipeline.txt  run_pipeline.py  run_pipeline.sh
training/data_pipeline/processors/: cleaner.py
training/data_pipeline/scrapers/: agriculture_scraper.py  banking_scraper.py  base_scraper.py  upsc_scraper.py
training/scripts/: evaluate.py  merge_and_quantize.sh  prepare_dataset.py  train.py  upload_to_hf.sh
(+5 files in other folders)
